test optional mapping and minor bug fix